# claude-learning-companion

./: .experiments.json  .gitignore  .stock-hashes  AGENT_E_SUMMARY.txt  CHANGELOG.md  CLAUDE.md  CLAUDE.md.optimized  COMMENT_FALSE_POSITIVE_FIX_SUMMARY.md  CONDUCTOR-INTEGRATION-COMPLETE.md  CONTRIBUTING.md  DISASTER_RECOVERY_TEST_REPORT.md  FRAMEWORK.md  GETTING_STARTED.md  PHASE2_IMPLEMENTATION_SUMMARY.md  README.md  UNINSTALL.md  check_worktrees_report.py  docker-compose.yml  install.ps1  install.sh  project.md  pyproject.toml  requirements.txt  run_git_commands.sh  settings.local.json  tmp_git_ops.sh  update.ps1  update.sh
.github/: FUNDING.yml
agents/: catalog  discover.py  native_subagents.py
ceo-inbox/: elf-audit-fix-list.md  terminal-bell-investigation.md
commands/: test-dashboard.md
conductor/: SECURITY.md  conductor.py  dashboard.py  dashboard_v2.py  executor.py  query_conductor.py  replay.py  schema.sql
config/: self-healing.yaml
coordinator/: blackboard.py  blackboard_v2.py  event_log.py  task_batcher.py
cycles/: 20251130_research-summary.md
dashboard-app/: DIFF_VIEWER_IMPLEMENTATION.md  run-dashboard.ps1  run-dashboard.sh  start.ps1
docs/: ADR.md  BASELINE_REFRESH_QUICK_START.md  CICD_WORKFLOW_PORTABILITY.md  MIGRATION_ELF_TO_CLC.md  OPERATIONS.md  PRODUCT_FEATURE_WORKFLOW.md  SESSION_TOOLS.md  TASK-write-test-suite.md  auto-claude-integration-guide.md  blog-post-draft.md  graph-memory-setup.md  threshold-tuning-guide.md
examples/: fraud_outcome_workflow.py
golden-rules/: 09-check-platform-before-tools.md  13-continuous-pr-monitoring.md  ASSUMPTION-RULE.md
hooks/: checkpoint-responder.py  enforce_claims.py  pre_clear_checkpoint.py  pre_compact.py  session_logger_hook.py  (+2 more)
mcp/: README.md  (+2 more)
(+434 files in other folders)
